# word2vec

./: .gitignore  .travis.yml  CHANGELOG.rst  Cargo.toml  README.md  tests.rs
examples/: example.rs
src/: errors.rs  lib.rs  test.rs  utils.rs  vectorreader.rs  wordclusters.rs  wordvectors.rs
tests/: tests.rs
